crate/lib/sinex-primitives/tests/proof_compile_fail/missing_checkpoint.stderr
error[E0599]: no method named `build` found for struct `SourceUnitBindingBuilder<HasOutput, HasPrivacy, HasMaterial, MissingCheckpoint, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>` in the current scope
  --> tests/proof_compile_fail/missing_checkpoint.rs:19:6
   |
 7 |       let _ = SourceUnitBinding::builder(
   |  _____________-
 8 | |         subject_ref!("runtime_unit:test.missing_checkpoint"),
 9 | |         "test.missing_checkpoint",
10 | |         "test",
...  |
18 | |     .build_impact(SourceUnitBuildImpact::ZERO)
19 | |     .build();
   | |     -^^^^^ method not found in `SourceUnitBindingBuilder<HasOutput, HasPrivacy, HasMaterial, MissingCheckpoint, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
   | |_____|
   |
   |
   = note: the method was found for
           - `SourceUnitBindingBuilder<HasOutput, HasPrivacy, HasMaterial, CheckpointPresent, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
